<resources>
    <string name="app_name">GroceryListApp</string>
    <string name="action_settings">Settings</string>
    <string name="addItem">Add Item</string>
    <string name="enter_item">Enter Item</string>
    <string name="hint">Enter Item Name</string>
    <string name="hintQt">Enter Quantity</string>
    <string name="saveButton">save</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="areYouSure">Are You Sure?</string>
    <string name="no_button">no</string>
    <string name="yes_button">yes</string>
</resources>
