<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25sp">

            <TextView
                android:id="@+id/title"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_item"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:id="@+id/itemName" android:paddingTop="5sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:hint="@string/hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/itemQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemName"
                android:hint="@string/hintQt"
                android:inputType="numberSigned"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saveButton"
                android:background="@color/colorAccent"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_below="@id/itemQuantity"
                android:layout_marginTop="5dp"/>

        </RelativeLayout>



    </android.support.v7.widget.CardView>
</LinearLayout>