<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/areYouSureTVID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/areYouSure"
                android:textSize="18sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/noButtonID"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:layout_below="@+id/areYouSureTVID"
                android:layout_marginTop="25dp"
                android:background="@color/colorAccent"
                android:text="@string/no_button"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/yesButtonID"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:layout_below="@+id/areYouSureTVID"
                android:layout_marginTop="25dp"
                android:background="@color/colorAccent"
                android:text="@string/yes_button"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                android:layout_alignBottom="@id/noButtonID"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>